--- a/views/index.jade
+++ b/views/index.jade
@@ -45,7 +45,7 @@ block content
         input#inputUserAge(type='text', placeholder='Age')
         br
         input#inputUserLocation(type='text', placeholder='Location')
-        input#inputUserGender(type='text', placeholder='Gender')
+        input#inputUserGender(type='text', placeholder='gender')
         br
         button#btnAddUser Add User
     // /ADD USER
